--- a/package.json
+++ b/package.json
@@ -13,8 +13,10 @@
 		"dotenv": "^16.3.1",
 		"ejs": "~2.6.1",
 		"express": "~4.16.1",
+		"express-validator": "^7.0.1",
 		"http-errors": "~1.6.3",
 		"mongoose": "^7.6.3",
-		"morgan": "~1.9.1"
+		"morgan": "~1.9.1",
+		"multer": "^1.4.5-lts.1"
 	}
 }
